# ansible-role-tripleo-image-build

./: .gitignore  .gitreview  README.md  groups  project.config  requirements.txt  setup.cfg
defaults/: main.yml  main.yml.orig
files/: ironic-python-agent-centos7-master.yaml  overcloud-full-centos7-liberty.yaml
handlers/: main.yml
meta/: main.yml
playbooks/: artib-build.yml  artib-collect-logs.yml  build.yml  build_default_images.yml
tasks/: artib_main.yml  bundle_logs.yml  convert_undercloud.yml  dib_build.yml  dib_build_kilo.yml  legacy_main.yml  legacy_package_install.yml  legacy_publish.yml  legacy_swap_file.yml  legacy_undercloud_inject.yml  main.yml  package_install.yml  publish-direct.yml  publish-staged.yml  publish.yml  repo_setup.yml  swap_file.yml  undercloud_inject.yml  undercloud_inject_kilo.yml
templates/: dib-manifest-centos7-mitaka.yaml.j2  dib-manifest-default.yaml.j2  dib-manifest.yaml.j2  dib-optional-env-inject.sh.j2  dib-prepare-centos7-default.sh.j2  ironic-python-agent.yaml.j2  overcloud-full.yaml.j2  package-install-default.sh.j2  package-install-trunk-workarounds.sh.j2  repo-centos7-cbs.sh.j2  repo-centos7-cloudsig-stable.sh.j2  repo-centos7-cloudsig-testing.sh.j2  repo-centos7-delorean.sh.j2  repo-centos7-liberty-delorean.sh.j2  repo-centos7-master-delorean.sh.j2  repo-centos7-mitaka-delorean.sh.j2  repo-centos7-pending-test.sh.j2  repo-info.sh.j2  reposync-yum.conf.j2  swapfile-create.sh.j2  undercloud-convert-default.sh.j2
tests/: ansible_env  ansible_env.sh  build.sh  requirements-build.txt  requirements-build.yml  simple-self-test.sh  test.yml
tests/galaxy/: requirements-build.yml
tests/pip/: build.sh  build_default_images.retry  build_default_images.yml  pip-ansible-env.sh  requirements-build.txt
tests/pip/plugins/callback/profile_timeline/: profile_timeline.py
tests/plugins/callback/profile_tasks/: profile_tasks.py
vars/: default_package_list.yml  dib-config-centos7-mitaka.yml  dib-config-kilo.yml  dib-config-rhel7-kilo.yml  dib-config-rhel7-mitaka.yml  legacy_default_package_list.yml  legacy_defaults.yml  main.yml  package-list-kilo.yml  package-list-mitaka.yml  package_list_kilo.yml
