[metadata]
name = ansible-role-tripleo-image-build
summary = ansible-role-tripleo-image-build - A ansible role for building tripleo images
description-file =
    README.md
author = RDO-CI Team
author-email = myoung@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-image-build
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-image-build/defaults = ../ansible-role-tripleo-image-build/defaults/*
    usr/local/share/ansible-role-tripleo-image-build/handlers = ../ansible-role-tripleo-image-build/handlers/*
    usr/local/share/ansible-role-tripleo-image-build/meta = ../ansible-role-tripleo-image-build/meta/*
    usr/local/share/ansible-role-tripleo-image-build/tasks = ../ansible-role-tripleo-image-build/tasks/*
    usr/local/share/ansible-role-tripleo-image-build/templates = ../ansible-role-tripleo-image-build/templates/*
    usr/local/share/ansible-role-tripleo-image-build/files = ../ansible-role-tripleo-image-build/files/*
    usr/local/share/ansible-role-tripleo-image-build/vars = ../ansible-role-tripleo-image-build/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
