[metadata]
name = ansible-role-tripleo-image-build
summary = ansible-role-tripleo-image-build - A ansible role for building tripleo images
description-file =
    README.md
author = RDO-CI Team
author-email = trown@redhat.com, myoung@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-image-build
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    playbooks                                                   = playbooks/*
    usr/local/share/ansible/roles/tripleo-image-build/defaults  = defaults/*
    usr/local/share/ansible/roles/tripleo-image-build/handlers  = handlers/*
    usr/local/share/ansible/roles/tripleo-image-build/library   = library/*
    usr/local/share/ansible/roles/tripleo-image-build/meta      = meta/*
    usr/local/share/ansible/roles/tripleo-image-build/tasks     = tasks/*
    usr/local/share/ansible/roles/tripleo-image-build/templates = templates/*
    usr/local/share/ansible/roles/tripleo-image-build/files     = files/*
    usr/local/share/ansible/roles/tripleo-image-build/vars      = vars/*
    usr/local/share/ansible/roles/tripleo-image-build/parts     = parts/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
